objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>DB_Campaign_Tactic__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Print Advertisement</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Employment Seminars</fullName>
                </value>
                <value>
                    <fullName>Webinars</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Referral Program</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lunches</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Sales Call Down</fullName>
                </value>
                <value>
                    <fullName>Online Banners/Ads</fullName>
                </value>
                <value>
                    <fullName>Internal Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Campaign_Tactic_old__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Print Advertisement</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Employment Seminars</fullName>
                </value>
                <value>
                    <fullName>Webinars</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Referral Program</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lunches</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Sales Call Down</fullName>
                </value>
                <value>
                    <fullName>Online Banners/Ads</fullName>
                </value>
                <value>
                    <fullName>Internal Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Campaign Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Name)&lt;5,&quot;Meaningful Campaign Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Status ,&quot;&quot;), &quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( StartDate )))=0, &quot;Start Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( EndDate )))=0, &quot;End Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(NumberOfContacts  +  NumberOfLeads = 0, &quot;No Associated Members, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT( ExpectedRevenue ))=0, &quot;Expected Revenue&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN(  Name  ) &lt; 5, 0,20) + IF(ISPICKVAL(  Type ,&quot;&quot; ), 0,20) + IF(ISPICKVAL( Status ,&quot;&quot; ), 0,20) + IF(LEN( TEXT(MONTH( StartDate )))= 0, 0,10) + IF( LEN(TEXT(MONTH( EndDate ))) = 0, 0,10) + IF(  NumberOfContacts  +  NumberOfLeads = 0, 0,10)  + IF( LEN( TEXT( ExpectedRevenue ) ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_BUDGETED_vs_ACTUAL_COST__c</fullName>
        <description>Created by Nexell to calculated Δ between Campaign Costs</description>
        <formula>HierarchyBudgetedCost - HierarchyActualCost</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Δ Budgeted vs Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UPC_Campaign_Owner_Change_Requester__c</fullName>
        <description>Created by Nexell. This field is used to store who requested the approval process and used in the email template.</description>
        <label>UPC Campaign Owner Change Requester</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Campaign_Owner_Email__c</fullName>
        <description>Created by Nexell and used on email templates on change owner process.</description>
        <formula>Owner.Email</formula>
        <label>Campaign Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Campaign_Owner_Name__c</fullName>
        <description>Created by Nexell to show the campaign owner without the possibility to change manually</description>
        <formula>Owner.FirstName &amp;&quot; &quot;&amp; Owner.LastName</formula>
        <label>Campaign Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Expected_vs_Value_Won__c</fullName>
        <description>Created by Nexell to Calculate the delta between total expected revenue vs value won opportunities.</description>
        <formula>HierarchyAmountWonOpportunities - HierarchyExpectedRevenue</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Δ Expected vs Value Won</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UPC_Former_Campaign_Owner_Name__c</fullName>
        <description>Created by Nexell to store the former campaign owner. This field will be used on the email templates during the process to change owner.</description>
        <label>Former Campaign Owner Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_New_Campaign_Owner_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by Nexell. This field is used to control when the owner change is approved. this will fire the automation to change the owner.</description>
        <label>New Campaign Owner Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_New_Campaign_Owner_Email__c</fullName>
        <description>Created by Nexell this field will store the email of the new campaign owner. Used on email templates.</description>
        <formula>UPC_New_Campaign_Owner__r.Email</formula>
        <label>New Campaign Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_New_Campaign_Owner_Name__c</fullName>
        <description>Created by Nexell. This field will store the new campaign owner name to be user on the email templates.</description>
        <formula>UPC_New_Campaign_Owner__r.FirstName  &amp;&apos; &apos;&amp; UPC_New_Campaign_Owner__r.LastName</formula>
        <label>New Campaign Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_New_Campaign_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by Nexell. This field will be user to select the new owner and start the approval process.</description>
        <label>New Campaign Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Reason_for_Changing_Owner__c</fullName>
        <description>Created by Nexell as part of the approval process to change an Campaign Owner.</description>
        <label>Reason for Changing Owner</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>